<resources>
    <string name="app_name">Hi实习-题库</string>
    <!--<string name="mvc_title">MVC 架构</string>-->
    <!--<string name="mvp_title">MVP 架构</string>-->

    <!--PullToRefreshLayout-->
    <string name="pullToRefresh_prepare">下拉以刷新</string>
    <string name="pullToRefresh_recycle">释放以更新</string>
    <string name="pullToRefresh_loading">正在刷新,请等待</string>
    <string name="pullToRefresh_complete">更新完成</string>

    <string name="loading_str">加载中...</string>
    <!-- 没有网络 -->
    <string name="no_internet">你的网络不给力，数据加载失败了</string>
    <string name="generic_server_down">服务器连接失败，程序员正在抢修</string>
    <!-- 网络异常 -->
    <string name="generic_error">你的网络不给力，数据加载失败了</string>
    <string name="loadMore_loadingText">正在加载</string>
    <string name="loadMore_noMoreText">没有更多内容</string>
    <!--loadmore-->
    <string name="cube_views_load_more_loading">loading...</string>
    <string name="cube_views_load_more_click_to_load_more">Click to load more</string>
    <string name="cube_views_load_more_loaded_no_more">All the data has been loaded</string>
    <string name="cube_views_load_more_loaded_empty">It is empty. :(</string>
    <string name="cube_views_load_more_error">Load error, click to retry</string>

    <!--登录页-->
    <string name="account_number_hint">请输入手机号</string>
    <string name="account_password_hint">请输入密码</string>
    <string name="forget_password_str">忘记密码？</string>
    <string name="login_str">登录</string>
    <string name="mobile_number_hint">请输入手机号码</string>
    <string name="verification_code_str">验证码</string>
    <string name="mobile_number_str">手机号</string>
    <string name="get_verify_code_str">获取验证码</string>
    <string name="verification_code_hint">请输入验证码</string>
    <string name="new_password_str">新密码</string>
    <string name="new_password_hint">6~18位字母+数字</string>
    <string name="reset_password_str">重置密码</string>
    <string name="go_to_chat_str">去上课</string>
    <string name="student_attachment_str">附件资料：</string>
    <string name="contact_mobile">联系手机：</string>
    <string name="student_info_title_str">用户信息</string>
    <string name="student_name_str">用户姓名：</string>
    <string name="look_str">查看</string>
    <string name="student_remark_desc_str">需求备注：</string>
    <string name="service_time_str">服务时间</string>
    <string name="load_more_str">正在加载</string>
    <string name="add_book_time">添加可预约时间</string>
    <string name="delete_str">删除</string>
    <string name="date_str">日期：</string>
    <string name="start_time_str">开始时间：</string>
    <string name="end_time_str">结束时间：</string>
    <string name="commit_str">提交</string>
    <string name="clear_str">清空</string>
    <string name="name_str">姓名</string>
    <string name="avator_str">头像</string>
    <string name="at_most_10_words">最多10个字</string>
    <string name="at_most_20_words">最多20个字</string>
    <string name="enterprise_str">企业</string>
    <string name="position_str">职位</string>
    <string name="slogan_str">标语</string>
    <string name="at_most_15_words">最多15个字</string>
    <string name="tag_str">标签</string>
    <string name="at_most_tag_words">最多6个，每个最多5个字</string>
    <string name="at_most_300_words">最多300字</string>
    <string name="introduction_str">简介</string>
    <string name="commit_desc_str">资料完善后即可在PC、APP的学生端显示</string>
    <string name="cancel_str">取消</string>
    <string name="permission_rationale">请在设置-权限管理中打开权限才能使用</string>
    <string name="complete_str">完成</string>
    <string name="add_str">添加</string>
    <string name="tag_at_most_words_hint">请输入5字以内标签</string>
    <string name="my_tags_str">我的标签：</string>
    <string name="write_personal_intro">在此输入个人简介</string>
    <string name="confirm_str">确定</string>
    <string name="latest_reserve_str">最近预约</string>
    <string name="unfinish_reserve">待完成预约</string>
    <string name="personal_info_str">个人资料</string>
    <string name="modify_password">修改密码</string>
    <string name="logout_str">退出登录</string>
    <string name="reserve_time_str">时间：</string>
    <string name="check_order">查看订单</string>
    <string name="reserve_type">进度类型</string>
    <string name="people_str">人群：</string>
    <string name="gain_str">收获：</string>
    <string name="package_detail_str">组合详情：</string>
    <string name="service_intro_str">服务简介：</string>
    <string name="begin_avchat_class">去上课</string>
    <string name="name_public_str">头像公开</string>
    <string name="name_public_desc">公开后未付费的同学也能看到您的头像</string>

</resources>
