<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/main_content_bg"
              android:orientation="vertical">


    <TextView
        android:id="@+id/tv_mobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/normal_padding"
        android:textColor="@color/grey_2"
        android:textSize="15sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_frame_height"
        android:background="@drawable/bg_top_bottom_line"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/normal_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verification_code_str"
            android:textColor="@color/grey_2"
            android:textSize="15sp"/>

        <com.hishixi.mentor.custom.view.ClearEditTextViewInLogin
            android:id="@+id/cetv_verification_code"
            android:layout_width="0dp"
            android:inputType="number"
            android:layout_marginEnd="10dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:drawableRight="@drawable/icon_clear_grey"
            android:background="@color/transparent"
            android:hint="@string/verification_code_hint"
            android:maxEms="6"
            android:textSize="15sp"/>

        <View
            android:layout_width="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/common_blue"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/btn_get_verification_code"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="1px"
            android:layout_marginBottom="1px"
            android:layout_marginEnd="@dimen/normal_padding"
            android:layout_weight="0"
            android:background="@color/transparent"
            android:gravity="center"
            android:text="@string/get_verify_code_str"
            android:textColor="@color/common_blue"
            android:textSize="@dimen/text_size_normal_1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_frame_height"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_top_bottom_line"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/normal_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_password_str"
            android:textColor="@color/grey_2"
            android:textSize="15sp"/>

        <com.hishixi.mentor.custom.view.ClearEditTextViewInLogin
            android:id="@+id/cetv_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:inputType="textVisiblePassword"
            android:background="@color/transparent"
            android:drawableRight="@drawable/icon_clear_grey"
            android:hint="@string/new_password_hint"
            android:maxLines="1"
            android:textSize="15sp"/>

        <FrameLayout
            android:id="@+id/fl_show_password"
            android:layout_width="@dimen/edit_frame_height"
            android:layout_height="@dimen/edit_frame_height"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/normal_padding"
          >

            <ImageView
                android:id="@+id/iv_show_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:contentDescription="@string/app_name"
                android:src="@drawable/icon_show_password"
                />
        </FrameLayout>
    </LinearLayout>


    <Button
        android:id="@+id/btn_reset_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="@dimen/normal_padding"
        android:layout_marginStart="@dimen/normal_padding"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_btn_login"
        android:text="@string/reset_password_str"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_big_1"
        />

</LinearLayout>